mdapipkg/objects/Position__c.object
<CustomObject>
    <fields>
        <fullName>CventId__c</fullName>
        <externalId>true</externalId>
        <label>CventId</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Eligible_for_GLC_Registration__c</fullName>
        <label>Eligible for GLC Registration</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GLC</fullName>
                </value>
                <value>
                    <fullName>CLW</fullName>
                </value>
                <value>
                    <fullName>GNS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Officer_Position__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Annual Third Party Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Training_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is training required for this position.</description>
        <label>Training Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Type__c</fullName>
        <label>Member Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Spouse/Partner</fullName>
                </value>
                <value>
                    <fullName>Management Team Member</fullName>
                </value>
                <value>
                    <fullName>Chapter Administrator</fullName>
                </value>
                <value>
                    <fullName>Either a Member or Spouse/Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nominee_CventId__c</fullName>
        <externalId>true</externalId>
        <label>Nominee CventId</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Nominee_Spouse_CventId__c</fullName>
        <externalId>true</externalId>
        <label>Nominee Spouse CventId</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Position_Category__c</fullName>
        <label>Position Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Super-Region</fullName>
                </value>
                <value>
                    <fullName>Region</fullName>
                </value>
                <value>
                    <fullName>Chapter</fullName>
                </value>
                <value>
                    <fullName>Forum</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Sub-Network</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Committee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position_Name__c</fullName>
        <label>Position Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Board</fullName>
                </value>
                <value>
                    <fullName>Chair</fullName>
                </value>
                <value>
                    <fullName>Education Coordinator</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Event Champion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position_Status__c</fullName>
        <label>Position Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spouse_CventId__c</fullName>
        <externalId>true</externalId>
        <label>Spouse CventId</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>The name of the position</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YPOI_Organizational_Code__c</fullName>
        <label>YPOI Organizational Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Position_Category__c</columns>
        <columns>Position_Status__c</columns>
        <columns>Member_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Member_Type__c</field>
            <operation>equals</operation>
            <value>Member,Spouse/Partner,Either a Member or Spouse/Partner</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ChptOfficer_Positions_Ntwk</fullName>
        <columns>NAME</columns>
        <columns>Position_Category__c</columns>
        <columns>Title__c</columns>
        <columns>Position_Name__c</columns>
        <columns>Position_Status__c</columns>
        <columns>Member_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Position_Category__c</field>
            <operation>contains</operation>
            <value>Chapter</value>
        </filters>
        <filters>
            <field>Member_Type__c</field>
            <operation>equals</operation>
            <value>Either a Member or Spouse/Partner,Member</value>
        </filters>
        <filters>
            <field>Position_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Chapter Officer Positions</label>
    </listViews>
    <listViews>
        <fullName>Committee_Positions</fullName>
        <columns>NAME</columns>
        <columns>Position_Category__c</columns>
        <columns>Title__c</columns>
        <columns>Position_Name__c</columns>
        <columns>Position_Status__c</columns>
        <columns>Member_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Position_Category__c</field>
            <operation>contains</operation>
            <value>Committee</value>
        </filters>
        <filters>
            <field>Member_Type__c</field>
            <operation>equals</operation>
            <value>Either a Member or Spouse/Partner,Member</value>
        </filters>
        <filters>
            <field>Position_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Committee Positions</label>
    </listViews>
    <listViews>
        <fullName>Officer_Positions_Ntwk</fullName>
        <columns>NAME</columns>
        <columns>Position_Category__c</columns>
        <columns>Title__c</columns>
        <columns>Position_Name__c</columns>
        <columns>Position_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Position_Category__c</field>
            <operation>contains</operation>
            <value>Network,Sub-Network</value>
        </filters>
        <label>Officer Positions - Networks</label>
    </listViews>
    <listViews>
        <fullName>TyOfficer_Positions</fullName>
        <columns>Is_Training_Required__c</columns>
        <columns>NAME</columns>
        <columns>Position_Category__c</columns>
        <columns>Title__c</columns>
        <columns>Position_Name__c</columns>
        <columns>Position_Status__c</columns>
        <columns>End_Date__c</columns>
        <columns>YPOI_Organizational_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Position_Category__c</field>
            <operation>contains</operation>
            <value>Chapter</value>
        </filters>
        <filters>
            <field>Position_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Is_Training_Required__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Ty Officer Positions</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Position ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>